// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assembleWebhookPayload > should assemble payload with reply-style 1`] = `
{
  "allowedMentions": {
    "parse": [],
  },
  "components": [],
  "content": "*↩︎ Replying to @User*
Hello world",
}
`;

exports[`assembleWebhookPayload > should assemble payload with reply-style but no jump button 1`] = `
{
  "allowedMentions": {
    "parse": [],
  },
  "components": [],
  "content": "*↩︎ Replying to @User*
Hello world",
}
`;

exports[`assembleWebhookPayload > should assemble payload without reply-style 1`] = `
{
  "allowedMentions": {
    "parse": [],
  },
  "components": [],
  "content": "Hello world",
}
`;
